# mentari-miniapp

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_IMPLEMENTATION_SUCCESS.md  GITHUB_UPLOAD_INSTRUCTIONS.txt  IMPLEMENTATION_SUMMARY.md  MINIAPP_GUIDE.md  PRODUCTION_UPDATE.md  QUICK_MINIAPP_SETUP.py  README.md  UNIFIED_GUIDE.md  UPDATE_URL_INSTRUCTIONS.txt  __init__.py  app.py  config_tool.py  demo_miniapp.py  docker-compose.yml  forum_tracker.py  helper.py  helper_backup.py  helper_clean.py  main.py  main_unified.py  miniapp.service  miniapp_server.py  nginx_miniapp.conf  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_production.txt  requirements_vercel.txt  run_bot_controller.py  run_unified.py  setup_production.py  test_course_mapping.py  test_integration_standalone.py  test_miniapp_e2e.py  test_miniapp_server.py  test_session_debug.py
api/: index.py
scripts/: bot_controller.py
src/: __init__.py
src/config/: __init__.py
src/core/: bot_service.py
src/integrations/: __init__.py  telegram_miniapp.py
src/models/: __init__.py
src/services/: auth_service.py  captcha_solver.py  forum_scraper.py  result_formatter.py
