[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mentari-unpam-bot"
version = "2.0.0"
description = "Bot Telegram untuk mengecek status forum diskusi di e-learning Mentari UNPAM"
authors = [
    {name = "Developer", email = "developer@example.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "python-telegram-bot>=20.0",
    "python-dotenv>=1.0.0",
    "nest-asyncio>=1.5.0",
    "httpx>=0.25.0",
    "certifi>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8", 
    "mypy",
    "pytest",
]

[project.scripts]
mentari-bot = "main:main"
bot-controller = "scripts.bot_controller:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
strict_optional = false

[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "telegram.*",
    "nest_asyncio.*",
    "main",
    "helper",
]
ignore_errors = true
ignore_missing_imports = true
